--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jcalendar-1.4.jar=C:\\Users\\WILLIAM\\Google Drive\\Doc_Ti\\NetBeansProjects\\Drivers Sql\\jcalendar-1.4.jar
 file.reference.mysql-connector-java-5.1.34.jar=liberys\\mysql-connector-java-5.1.34.jar
+file.reference.postgresql-9.3-1101.jdbc41.jar=liberys\\postgresql-9.3-1101.jdbc41.jar
 file.reference.TimerBean.jar=liberys/TimerBean.jar
 includes=**
 jar.compress=false
@@ -36,7 +37,8 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.34.jar}:\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.TimerBean.jar}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.postgresql-9.3-1101.jdbc41.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
