--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/Acqua.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.com-jaspersoft-ireport-hadoop-hive.jar=C:\\Program Files (x86)\\Jaspersoft\\iReport-5.6.0\\ireport\\modules\\com-jaspersoft-ireport-hadoop-hive.jar
+file.reference.com-jaspersoft-ireport.jar=C:\\Program Files (x86)\\Jaspersoft\\iReport-5.6.0\\ireport\\modules\\com-jaspersoft-ireport.jar
+file.reference.jasperreports-5.6.0.jar=C:\\Users\\william\\Documents\\jasperreports-5.6.0.jar
 file.reference.jcalendar-1.4.jar=C:\\Users\\WILLIAM\\Google Drive\\Doc_Ti\\NetBeansProjects\\Drivers Sql\\jcalendar-1.4.jar
 file.reference.mysql-connector-java-5.1.34.jar=liberys\\mysql-connector-java-5.1.34.jar
-file.reference.postgresql-9.3-1101.jdbc41.jar=liberys\\postgresql-9.3-1101.jdbc41.jar
 file.reference.TimerBean.jar=liberys/TimerBean.jar
 includes=**
 jar.compress=false
@@ -38,7 +40,12 @@ javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.TimerBean.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.postgresql-9.3-1101.jdbc41.jar}
+    ${libs.iReport.classpath}:\
+    ${libs.Grovyy.classpath}:\
+    ${libs.Libs.classpath}:\
+    ${file.reference.com-jaspersoft-ireport.jar}:\
+    ${file.reference.jasperreports-5.6.0.jar}:\
+    ${file.reference.com-jaspersoft-ireport-hadoop-hive.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
