--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,11 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Acqua
+application.vendor=William
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,6 +28,7 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/Acqua.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.com-jaspersoft-ireport-hadoop-hive.jar=C:\\Program Files (x86)\\Jaspersoft\\iReport-5.6.0\\ireport\\modules\\com-jaspersoft-ireport-hadoop-hive.jar
 file.reference.com-jaspersoft-ireport.jar=C:\\Program Files (x86)\\Jaspersoft\\iReport-5.6.0\\ireport\\modules\\com-jaspersoft-ireport.jar
@@ -34,21 +37,20 @@ file.reference.jcalendar-1.4.jar=C:\\Users\\WILLIAM\\Google Drive\\Doc_Ti\\NetBe
 file.reference.mysql-connector-java-5.1.34.jar=liberys\\mysql-connector-java-5.1.34.jar
 file.reference.TimerBean.jar=liberys/TimerBean.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.34.jar}:\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.TimerBean.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${libs.iReport.classpath}:\
-    ${libs.Grovyy.classpath}:\
-    ${libs.Libs.classpath}:\
     ${file.reference.com-jaspersoft-ireport.jar}:\
     ${file.reference.jasperreports-5.6.0.jar}:\
     ${file.reference.com-jaspersoft-ireport-hadoop-hive.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
-javac.deprecation=false
+javac.deprecation=true
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
@@ -69,7 +71,20 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
 main.class=br.com.wss.utilidades.Principal
+# Substitui\u00e7\u00e3o opcional do atributo de manifesto da Base de c\u00f3digo; use para impedir que RIAs sejam adaptados
+manifest.custom.codebase=
+# Substitui\u00e7\u00e3o opcional do atributo de manifesto de Permiss\u00f5es (valores suportados: sandbox, all-permissions)
+manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
