--- a/src/br/com/wss/Config/rrWssSolution.ini
+++ b/src/br/com/wss/Config/rrWssSolution.ini
@@ -1,17 +1,17 @@
--------------------------------- Inicialização --------------------------------
+-------------------------------- Inicializaï¿½ï¿½o --------------------------------
 -------------------------------------------------------------------------------
 Arquivo de inicializacao do AcquaSistem - WWssSolutions Informatica Ltda ------
 -------------------------------------------------------------------------------
-Linhas iniciadas abaixo se referem a classe arquivos de configuração so sistema
-versionAtual = C:\\WssSolutions\\Version.ini
-versionNova = //DADOS-SERVER/AcquaSolutions/Version.ini
-origemFolderCopy = //DADOS-SERVER/AcquaSolutions
+Linhas iniciadas abaixo se referem a classe arquivos de configuraï¿½ï¿½o so sistema
+versionAtual = C:\\WssSolutions\\br\\com\\wss\\Config\\Version.ini
+versionNova = C:\\Users\\william\\Desktop\\Instalador\\Version.ini
+origemFolderCopy = C:\\Users\\william\\Desktop\\Instalador
 destinoFolderCopy = C:\\WssSolutions
 -------------------------------------------------------------------------------
-Linhas iniciadas abaixo se referem a classe de conexão com banco de dados
+Linhas iniciadas abaixo se referem a classe de conexï¿½o com banco de dados
 disponiveis na rede -----------------------------------------------------------
 LOCAL = C:\WssSolutions
-REMOTO = jdbc:mysql://172.168.0.2:3306/acqua_dados
+REMOTO = jdbc:mysql://william:3306/acqua_dados
 USUARIO = root
-SENHA = acquaSUPORTE
+SENHA = 12345
 -------------------------------------------------------------------------------
