--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,9 +32,16 @@ endorsed.classpath=
 excludes=
 file.reference.com-jaspersoft-ireport-hadoop-hive.jar=C:\\Program Files (x86)\\Jaspersoft\\iReport-5.6.0\\ireport\\modules\\com-jaspersoft-ireport-hadoop-hive.jar
 file.reference.com-jaspersoft-ireport.jar=C:\\Program Files (x86)\\Jaspersoft\\iReport-5.6.0\\ireport\\modules\\com-jaspersoft-ireport.jar
+file.reference.commons-beanutils-1.8.2.jar=C:\\Users\\william\\Documents\\NetBeansProjects\\liberys\\LibsIreort\\commons-beanutils-1.8.2.jar
+file.reference.commons-collections-3.2.1.jar=C:\\Users\\william\\Documents\\NetBeansProjects\\liberys\\LibsIreort\\commons-collections-3.2.1.jar
+file.reference.commons-digester-2.1.jar=C:\\Users\\william\\Documents\\NetBeansProjects\\liberys\\LibsIreort\\commons-digester-2.1.jar
+file.reference.commons-logging-1.1.jar=C:\\Users\\william\\Documents\\NetBeansProjects\\liberys\\LibsIreort\\commons-logging-1.1.jar
+file.reference.iText-2.1.7.js2.jar=C:\\Users\\william\\Documents\\NetBeansProjects\\liberys\\LibsIreort\\iText-2.1.7.js2.jar
 file.reference.jasperreports-5.6.0.jar=C:\\Users\\william\\Documents\\jasperreports-5.6.0.jar
+file.reference.jasperreports-5.6.0.jar-1=C:\\Users\\william\\Documents\\NetBeansProjects\\liberys\\LibsIreort\\jasperreports-5.6.0.jar
 file.reference.jcalendar-1.4.jar=C:\\Users\\WILLIAM\\Google Drive\\Doc_Ti\\NetBeansProjects\\Drivers Sql\\jcalendar-1.4.jar
 file.reference.mysql-connector-java-5.1.34.jar=liberys\\mysql-connector-java-5.1.34.jar
+file.reference.poi-3.7-20101029.jar=C:\\Users\\william\\Documents\\NetBeansProjects\\liberys\\LibsIreort\\poi-3.7-20101029.jar
 file.reference.TimerBean.jar=liberys/TimerBean.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
@@ -47,7 +54,14 @@ javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.com-jaspersoft-ireport.jar}:\
     ${file.reference.jasperreports-5.6.0.jar}:\
-    ${file.reference.com-jaspersoft-ireport-hadoop-hive.jar}
+    ${file.reference.com-jaspersoft-ireport-hadoop-hive.jar}:\
+    ${file.reference.commons-beanutils-1.8.2.jar}:\
+    ${file.reference.commons-collections-3.2.1.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-logging-1.1.jar}:\
+    ${file.reference.iText-2.1.7.js2.jar}:\
+    ${file.reference.jasperreports-5.6.0.jar-1}:\
+    ${file.reference.poi-3.7-20101029.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=true
