--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,6 +36,7 @@ file.reference.commons-beanutils-1.8.2.jar=C:\\Users\\william\\Documents\\NetBea
 file.reference.commons-collections-3.2.1.jar=C:\\Users\\william\\Documents\\NetBeansProjects\\liberys\\LibsIreort\\commons-collections-3.2.1.jar
 file.reference.commons-digester-2.1.jar=C:\\Users\\william\\Documents\\NetBeansProjects\\liberys\\LibsIreort\\commons-digester-2.1.jar
 file.reference.commons-logging-1.1.jar=C:\\Users\\william\\Documents\\NetBeansProjects\\liberys\\LibsIreort\\commons-logging-1.1.jar
+file.reference.dom4j-1.6.1.jar=C:\\Users\\william\\Documents\\NetBeansProjects\\liberys\\dom4j-1.6.1.jar
 file.reference.iText-2.1.7.js2.jar=C:\\Users\\william\\Documents\\NetBeansProjects\\liberys\\LibsIreort\\iText-2.1.7.js2.jar
 file.reference.jasperreports-5.6.0.jar=C:\\Users\\william\\Documents\\jasperreports-5.6.0.jar
 file.reference.jasperreports-5.6.0.jar-1=C:\\Users\\william\\Documents\\NetBeansProjects\\liberys\\LibsIreort\\jasperreports-5.6.0.jar
@@ -61,7 +62,8 @@ javac.classpath=\
     ${file.reference.commons-logging-1.1.jar}:\
     ${file.reference.iText-2.1.7.js2.jar}:\
     ${file.reference.jasperreports-5.6.0.jar-1}:\
-    ${file.reference.poi-3.7-20101029.jar}
+    ${file.reference.poi-3.7-20101029.jar}:\
+    ${file.reference.dom4j-1.6.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=true
